<resources>
    <string name="slogan">Do something great today!</string>
    <string name="comment">Please, write a comment today!</string>
    <string name="comment_date">Comment at %1$s</string>
    <string name="dialog_comment_hint">Type something</string>
    <string name="tap_to_stop">Tap on me to stop voice task</string>
    <string name="day_results"><![CDATA[Actions count: %1$d<br><br>Comment: %2$s]]></string>
    <string name="information">Android app which helps to do something great in life\nAuthor: Vlad Kalyuzhnyu\nApp version: %1$s\nCompatible db version: %2$d</string>

    <string name="result_action_days">Action days count: %1$d</string>
    <string name="result_all_days">All days count: %1$d</string>
    <string name="result_actions">All actions count: %1$d</string>
    <string name="result_conclusion">Keep her steady!</string>

    <string name="menu_add">Add action(s)</string>
    <string name="menu_refresh">Upgrade db</string>
    <string name="menu_comment">Write comment</string>
    <string name="menu_star">Star app</string>
    <string name="menu_information">Information</string>

    <string name="add_zero">%1$d actions</string>
    <string name="add_plus1">+1 action</string>
    <string name="add_plus3">+3 actions</string>
    <string name="add_plus5">+5 actions</string>
    <string name="add_plus15">+15 actions</string>

    <string name="task_action">Action</string>
    <string name="task_comment">Comment</string>
    <string name="task_result">Results</string>
    <string name="task_sound">Sound</string>
    <string name="task_upgrade">Upgrade</string>
    <string name="task_voice">Voice</string>
    <string name="task_word">Words</string>

    <string name="error_crash">An error occurred, please send a letter to the developer to solve the problem</string>
    <string name="error_comment">And it will be great if you add a few words about what happened</string>
</resources>