<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:title="@string/menu_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:visible="false"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_zero"
                android:title="@string/add_zero" />
            <item
                android:id="@+id/menu_plus1"
                android:title="@string/add_plus1" />
            <item
                android:id="@+id/menu_plus3"
                android:title="@string/add_plus3" />
            <item
                android:id="@+id/menu_plus5"
                android:title="@string/add_plus5" />
            <item
                android:id="@+id/menu_plus15"
                android:title="@string/add_plus15" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_comment"
        android:title="@string/menu_comment"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_star"
        android:title="@string/menu_star"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_information"
        android:title="@string/menu_information"
        app:showAsAction="never"/>
</menu>